# JCoder

./: .gitattributes  .gitignore  CLAUDE.md  OPUS_URGENT.md  ORCHESTRATOR_MESSAGE.md  README.md  READ_FIRST_30_MINUTES_BACK_CHECKLIST_2026-03-22.md  READ_FIRST_HANDOFF_2026-03-23.md  READ_FIRST_HANDOFF_2026-03-24.md  READ_FIRST_MASTER_HANDOFF_2026-03-22.md  WAR_ROOM_AUTOMATION_GUARDRAIL_2026-03-21.md  WAR_ROOM_MASTER_HANDOFF_2026-03-22.md  WAR_ROOM_REPO_HANDOFF_AND_RECOVERY_PRIORITIES_2026-03-22.md  WAR_ROOM_UNATTENDED_REPO_TEAM_OBJECTIVE_TEMPLATE_2026-03-22.md  WAR_ROOM_URGENT_SLEEP_HANDOFF_HOT_ITEM_2026-03-22.md  __WAR_ROOM.lnk  main.py  pyproject.toml  requirements.txt
_runs_demo/: ledger.sqlite
agent/: __init__.py  artifact_bus.py  bridge.py  bridge_factory.py  bridge_strategies.py  config_loader.py  config_yaml_helpers.py  core.py  core_recovery.py  goals.py  llm_backend.py  logger.py  memory.py  multi_agent.py  prompts.py  session.py  tool_defs.py  tool_schemas.py  tools.py  tools_file_ops.py  tools_knowledge_ops.py  tools_shell_ops.py  web_tools.py
cli/: agent_cmd.py  bench_cmd.py  commands.py  doctor.py  doctor_cmd.py  evolve_cmd.py  gui_cmd.py  harvest_cmd.py  ingest_cmd.py  repl_cmd.py  research_cmd.py
config/: agent.yaml  benchmark_hashes.json  default.yaml  download_queue.json  memory.yaml  models.yaml  policies.yaml  ports.yaml  profiles.yaml
core/: active_learner.py  adaptive_research.py  adaptive_research_components.py  adaptive_research_models.py  adversarial_self_play.py  ast_graph.py  autonomous_research_lab.py  best_of_n.py  burst_pipeline.py  cascade.py  claim_verifier.py  (+63 more)
(+550 files in other folders)
