[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "jcoder"
version = "0.1.0"
description = "Offline autonomous coding assistant with dual LLM backend and RAG"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
gpu = ["faiss-gpu>=1.7.4"]
cpu = ["faiss-cpu>=1.7.4"]
tree-sitter = [
    "tree-sitter>=0.22.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-cpp>=0.23.0",
    "tree-sitter-c>=0.23.0",
    "tree-sitter-c-sharp>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-ruby>=0.23.0",
    "tree-sitter-php>=0.23.0",
    "tree-sitter-kotlin>=0.23.0",
]
ingest = [
    "pyzstd>=0.16.0",
    "py7zr>=0.22.0",
    "langdetect>=1.0.9",
]
dev = [
    "pytest>=7.4.0",
    "pytest-timeout>=2.2.0",
]
all = ["jcoder[gpu,tree-sitter,ingest,dev]"]

[project.scripts]
jcoder = "cli.commands:cli"
jcoder-gui = "gui.app:main"

[tool.setuptools.packages.find]
include = ["agent*", "cli*", "core*", "ingestion*", "evaluation*", "scripts*", "gui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short -m \"not slow\""
markers = [
    "slow: timing-sensitive or long-running tests excluded from default regression runs",
]
